@@ -1,4 +1,6 @@
-<?php
+<table>
+  <tr>
+    <td><?php
 include_once 'includes/init.php';
 
 // load user and global cats
@@ -42,25 +44,35 @@ if ( empty ( $add ) )
 if ( ( ( $add == '1' ) || ( ! empty ( $id ) ) ) && empty ( $error ) ) {
   $button = translate("Add");
   ?>
-  <form action="category_handler.php" method="post">
+  <form action="category_handler.php" method="post"  enctype="multipart/form-data">
   <?php
   if ( ! empty ( $id ) ) {
     echo "<input name=\"id\" type=\"hidden\" value=\"$id\" />";
     $button = translate("Save");
     $catname = $categories[$id];
     $catowner = $category_owners[$id];
+    $catIcon = "icons/cat-" . $id . ".gif";
   } else {
     $catname = '';
   }
   ?>
   <?php etranslate("Category Name")?>: <input type="text" name="catname" size="20" value="<?php echo htmlspecialchars ( $catname ); ?>" />
   <br />
+  <?php 
+    if ( file_exists ( $catIcon ) ){
+      echo "<br />" . translate ( 'Category Icon' ) . ":  <img src=\"$catIcon\" />\n";
+    }
+  ?>
   <?php if ( $is_admin && empty ( $id ) ) { ?>
     <?php etranslate("Global")?>:
       <label><input type="radio" name="isglobal" value="N" <?php if ( ! empty ( $catowner ) || empty ( $id ) ) echo " checked=\"checked\"";?> />&nbsp;<?php etranslate("No")?></label>&nbsp;&nbsp;
       <label><input type="radio" name="isglobal" value="Y" <?php if ( empty ( $catowner ) && ! empty ( $id ) ) echo " checked=\"checked\"";?> />&nbsp;<?php etranslate("Yes")?></label>
   <?php } ?>
   <br /><br />
+ <?php echo translate ( 'Add Icon to Category' ) . " <span style=\"font-size:small;\">(" . translate ("gif 3kb max") . ")</span> :"; ?>
+ <input type="hidden" name="MAX_FILE_SIZE" value="3000" />
+ <input type="file" name="FileName" id="fileupload" size="45" maxlength="50" /> 
+ <br /><br />
   <input type="submit" name="action" value="<?php echo $button;?>" />
   <?php if ( ! empty ( $id ) ) {  ?>
  <input type="submit" name="delete" value="<?php etranslate("Delete");?>" onclick="return confirm('<?php etranslate("Are you sure you want to delete this entry?", true); ?>')" />
@@ -73,6 +85,7 @@ if ( ( ( $add == '1' ) || ( ! empty ( $id ) ) ) && empty ( $error ) ) {
   if ( ! empty ( $categories ) ) {
     echo "<ul>";
     foreach ( $categories as $K => $V ) {
+      $catIcon = "icons/cat-" . $K . ".gif";
       echo "<li>";
       if ( $category_owners[$K] == $login || $is_admin )
         echo "<a href=\"category.php?id=$K\">$V</a>";
@@ -80,7 +93,10 @@ if ( ( ( $add == '1' ) || ( ! empty ( $id ) ) ) && empty ( $error ) ) {
         echo $V;
       if ( empty ( $category_owners[$K] ) ) {
         echo "<sup>*</sup>";
- $global_found = true;
+        $global_found = true;
+      }
+      if ( file_exists ( $catIcon ) ){
+        echo "&nbsp;&nbsp;<img src=\"$catIcon\" />\n";
       }
       echo "</li>\n";
     }
@@ -99,3 +115,6 @@ if ( ! empty ( $error ) ) {
 <?php print_trailer(); ?>
 </body>
 </html>
+</td>
+  </tr>
+</table>
