@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2005)
+ - Added option to upload category icons
  = Fixed bug 1365219: Highlighted "today" changes too early - v1.1.0-CVS
  - Fixed bug 1397766: Tomorrow Report fails to This Week
  - Fixed bug 1387646: Repeated events are not shown repeatedly
